Fixed bottom controls on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,8 @@
 }
 
 html,
-body {
+body,
+#app {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -34,6 +35,7 @@ img {
   align-items: center;
   width: 100%;
   height: 100vh;
+  height: 100dvh;
   opacity: 0;
   transition: opacity 1s ease-in;
 }
